--- a/assets/scss/poezie-ro.scss
+++ b/assets/scss/poezie-ro.scss
@@ -32,7 +32,7 @@ header {
     align-items: stretch;
     flex-direction: row;
     border-bottom: 1px solid #ccc;
-    li {
+    > li {
       flex-grow: 1;
       display: flex;
       flex-direction: column;
@@ -63,30 +63,48 @@ header {
         display: flex;
         align-items: center;
         justify-content: center;
+        transition: transform .2s ease-out, text-shadow .2s ease-out;
+        &:hover {
+          text-decoration: none;
+          text-shadow: 0 -1px 0 currentColor;
+        }
+        &:active {
+
+        }
       }
-      &.active a:not(#_) {
+      &.active{
+        a:not(._) {
+          color: #222;
+          text-decoration: none;
+          transform: scale(1.1);
+          text-shadow: none;
+          font-weight: bold;
+        }
+      }
+      &.show > a:not(._) {
         color: #222;
         text-decoration: none;
-        transform: scale(1.1) translateX(1px);
-        text-shadow: none;
-        font-weight: bold;
+        text-shadow: 0 -1px 0 currentColor;
+      }
+      &.dropdown {
+        perspective: 250px;
+        backface-visibility: hidden;
+        transform-style: preserve-3d;
+        perspective-origin: 50% 0;
       }
     }
   }
   a {
     color: #999;
-    transform: translateZ(0) scale(1);
-    transition: all .42s ease-out, transform .42s cubic-bezier(.4,0,.2,1);
-    transform-origin: 65% 100%;
     &:link {color: #999;}
     /*&:visited {color: #ccc;}*/
     &:hover {
       color: #222;
       text-decoration: none;
-      transform: scale(1.1) translateX(2px);
-      text-shadow: 0 1px 0 currentColor;
     }
-    &:active {color: #222;}
+    &:active {
+
+    }
   }
 }
 .paper-sheet {
@@ -124,4 +142,67 @@ header {
 }
 .spacer {
   visibility: hidden;
+}
+.dropdown-toggle{
+  &:after {
+    border: .2em solid;
+    border-color: transparent currentColor currentColor transparent;
+    transform: rotate(45deg);
+    left: 4px;
+    width: 13px;
+    height: 13px;
+    position: relative;
+    top: -1px;
+    transition: all .3s cubic-bezier(.4,0,.2,1);
+    .show > & {
+      top: 4px;
+      transform: rotate(-135deg);
+    }
+    /*.dropdown-item > & {
+      transform: rotate(-45deg);
+      right: 1rem;
+      left: auto;
+      position: absolute;
+      top: .228rem;
+    }*/
+  }
+  /*.dropdown-menu & {
+    display: block;
+    width: calc(100% + 3rem);
+    margin: 0 -1.5rem;
+    padding: 0 1.5rem;
+    position: relative;
+  }*/
+}
+.navbar-nav .dropdown-menu {
+  min-width: 200px;
+  border: none;
+  border-radius: 0;
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,.1), 0 4px 5px 0 rgba(0,0,0,.07), 0 1px 10px 0 rgba(0,0,0,.06);
+  display: block;
+  pointer-events: none;
+  transition: transform .3s cubic-bezier(.4,0,.2,1);
+  transform-origin: 50% 0;
+  position: absolute;
+  left: 50% !important;
+  top: 47px !important;
+  transform: rotateX(-79deg) translateX(-50%)!important;
+  &:before {
+    position: absolute;
+    top: -3px;
+    content: '';
+    width: 100%;
+    left: 0;
+    height: 3px;
+    background-color: #000;
+    transform: scale(0,1);
+    transition: transform .42s cubic-bezier(.4,0,.2,1);
+  }
+  &.show {
+    pointer-events: all;
+    transform: rotateX(0deg) translateX(-50%) !important;
+    &:before {
+      transform: scale(1);
+    }
+  }
 }
