--- a/assets/scss/poezie-ro.scss
+++ b/assets/scss/poezie-ro.scss
@@ -174,6 +174,17 @@ header {
     position: relative;
   }*/
 }
+.nav-item.dropdown-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  a {
+    display: block;
+    padding: 0 1.5rem;
+    flex-grow: 1;
+  }
+}
 .navbar-nav .dropdown-menu {
   min-width: 200px;
   border: none;
