--- a/assets/scss/poezie-ro.scss
+++ b/assets/scss/poezie-ro.scss
@@ -1,219 +1,175 @@
-html, body {height: 100%;}
+@import url('bootstrap.css');
+@import url('top-menu.css');
+
+html, body {
+	height: 100%;
+}
+
 body {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
+
 main {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  [flex-grow] {
-    flex-grow: 1;
-  }
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	[flex-grow] {
+		flex-grow: 1;
+	}
 }
+
 .top-carousel {
-  min-height: 420px;
+	min-height: 420px;
 }
+
 header {
-  min-height: 176px;
-  position: relative;
-  padding-bottom: 48px;
+	min-height: 176px;
+	position: relative;
+	padding-bottom: 48px;
+	z-index: 1;
 }
-#top-menu {
-  bottom: 0;
-  position: absolute;
-  left: 0;
-  right: 0;
-  .navbar-nav {
-    height: 48px;
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    flex-direction: row;
-    border-bottom: 1px solid #ccc;
-    > li {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: stretch;
-      nav-anim {
-        display: flex;
-        position: relative;
-        height: 0;
-        width: 100%;
-        &:after {
-          display: block;
-          content: '';
-          background-color: black;
-          width: 100%;
-          height: 3px;
-          transform: scale(0, 1);
-          position: absolute;
-          transition: transform .3s cubic-bezier(.4,0,.2,1);
-          top: -1px;
-        }
-      }
-      &:hover nav-anim:after, &.active nav-anim:after {
-        transform: scale(1, 1);
-      }
-      > a {
-        flex-grow: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: transform .2s ease-out, text-shadow .2s ease-out;
-        &:hover {
-          text-decoration: none;
-          text-shadow: 0 -1px 0 currentColor;
-        }
-        &:active {
 
-        }
-      }
-      &.active{
-        a:not(._) {
-          color: #222;
-          text-decoration: none;
-          transform: scale(1.1);
-          text-shadow: none;
-          font-weight: bold;
-        }
-      }
-      &.show > a:not(._) {
-        color: #222;
-        text-decoration: none;
-        text-shadow: 0 -1px 0 currentColor;
-      }
-      &.dropdown {
-        perspective: 250px;
-        backface-visibility: hidden;
-        transform-style: preserve-3d;
-        perspective-origin: 50% 0;
-      }
-    }
-  }
-  a {
-    color: #999;
-    &:link {color: #999;}
-    /*&:visited {color: #ccc;}*/
-    &:hover {
-      color: #222;
-      text-decoration: none;
-    }
-    &:active {
-
-    }
-  }
-}
 .paper-sheet {
-  background-color: white;
+	background-color: white;
+	.list-group-item {
+		border-color: rgba(0,0,0,.07) transparent;
+		&:last-child {
+			border-bottom: transparent;
+		}
+	}
+	.card {
+		border-width: 0;
+	}
 }
+
 .alter-n8 {
-  .paper-sheet {
-    border-radius: 5px 5px 0 0;
-    box-shadow: 0 1px 8px 0 rgba(0,0,0,.1), 0 3px 4px 0 rgba(0,0,0,.07), 0 3px 3px -2px rgba(0,0,0,.06);
-    margin-top: 3rem;
-  }
-  background-color: #f8f8f8;
-  border: 1px solid transparent;
-  &[b-top] {
-    border-top: 1px solid #eee;
-  }
-  &[b-bottom] {
-    border-bottom: 1px solid #eee;
-  }
-  &[b-left] {
-    border-left: 1px solid #eee;
-  }
-  &[b-right] {
-    border-right: 1px solid #eee;
-  }
-  &[b-full] {
-    border: 1px solid #eee;
-  }
-  &[b-vertical] {
-    border-color: #eee transparent;
-  }
-  &[b-horizontal] {
-    border-color: #eee transparent;
-  }
+	.paper-sheet {
+		border-radius: 3px 3px 0 0;
+		box-shadow: 0 1px 8px 0 rgba(0, 0, 0, .1), 0 3px 4px 0 rgba(0, 0, 0, .07), 0 3px 3px -2px rgba(0, 0, 0, .06);
+		margin-top: 3rem;
+	}
+	background-color: #f8f8f8;
+	border: solid #eee;
+	border-width: 1px 0;
 }
+
 .spacer {
-  visibility: hidden;
+	visibility: hidden;
 }
-.dropdown-toggle{
-  &:after {
-    border: .2em solid;
-    border-color: transparent currentColor currentColor transparent;
-    transform: rotate(45deg);
-    left: 4px;
-    width: 13px;
-    height: 13px;
-    position: relative;
-    top: -1px;
-    transition: all .3s cubic-bezier(.4,0,.2,1);
-    .show > & {
-      top: 4px;
-      transform: rotate(-135deg);
-    }
-    /*.dropdown-item > & {
-      transform: rotate(-45deg);
-      right: 1rem;
-      left: auto;
-      position: absolute;
-      top: .228rem;
-    }*/
-  }
-  /*.dropdown-menu & {
-    display: block;
-    width: calc(100% + 3rem);
-    margin: 0 -1.5rem;
-    padding: 0 1.5rem;
-    position: relative;
-  }*/
+
+.dropdown {
+	.dropdown-toggle {
+		&:after {
+			border: .2em solid;
+			border-color: transparent currentColor currentColor transparent;
+			transform: rotate(45deg);
+			left: 4px;
+			width: 13px;
+			height: 13px;
+			position: relative;
+			top: -2px;
+			transition: all .3s cubic-bezier(.4, 0, .2, 1);
+		}
+	}
+	&.show {
+		.dropdown-toggle:after {
+			top: 4px;
+			transform: rotate(-135deg);
+		}
+	}
+	.nav-item.dropdown-item {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding: 0;
+		> a {
+			display: flex;
+			padding: .5rem 1.5rem;
+			flex-grow: 1;
+		}
+	}
+	.navbar-nav & .dropdown-menu {
+		min-width: 200px;
+		border: none;
+		border-radius: 0;
+		box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .1), 0 4px 5px 0 rgba(0, 0, 0, .07), 0 1px 10px 0 rgba(0, 0, 0, .06);
+		display: block;
+		pointer-events: none;
+		transition: transform .3s cubic-bezier(.4, 0, .2, 1);
+		transform-origin: 50% 0;
+		position: absolute;
+		left: 50% !important;
+		top: 47px !important;
+		transform: rotateX(-79deg) translateX(-50%) !important;
+		&:before {
+			position: absolute;
+			top: -3px;
+			content: '';
+			width: 100%;
+			left: 0;
+			height: 3px;
+			background-color: #000;
+			transform: scale(0, 1);
+			transition: transform .42s cubic-bezier(.4, 0, .2, 1);
+		}
+		&.show {
+			pointer-events: all;
+			transform: rotateX(0deg) translateX(-50%) !important;
+			&:before {
+				transform: scale(1);
+			}
+		}
+	}
 }
-.nav-item.dropdown-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
-  a {
-    display: block;
-    padding: 0 1.5rem;
-    flex-grow: 1;
-  }
+
+.card-img-top {
+	min-height: 175px;
+	background: #f5f5f5 center center /cover;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: stretch;
+	.card-body {
+		background-color: rgba(255,255,255,.85);
+		flex-grow: 0;
+	}
 }
-.navbar-nav .dropdown-menu {
-  min-width: 200px;
-  border: none;
-  border-radius: 0;
-  box-shadow: 0 2px 4px -1px rgba(0,0,0,.1), 0 4px 5px 0 rgba(0,0,0,.07), 0 1px 10px 0 rgba(0,0,0,.06);
-  display: block;
-  pointer-events: none;
-  transition: transform .3s cubic-bezier(.4,0,.2,1);
-  transform-origin: 50% 0;
-  position: absolute;
-  left: 50% !important;
-  top: 47px !important;
-  transform: rotateX(-79deg) translateX(-50%)!important;
-  &:before {
-    position: absolute;
-    top: -3px;
-    content: '';
-    width: 100%;
-    left: 0;
-    height: 3px;
-    background-color: #000;
-    transform: scale(0,1);
-    transition: transform .42s cubic-bezier(.4,0,.2,1);
-  }
-  &.show {
-    pointer-events: all;
-    transform: rotateX(0deg) translateX(-50%) !important;
-    &:before {
-      transform: scale(1);
-    }
-  }
+.text-ellipsis {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	display: block;
+}
+
+b-parent {
+	position: relative;
+}
+b-right, b-left {
+	position: absolute;
+	height: calc(100% - 110px);
+	top: 55px;
+	width: 1px;
+}
+b-top, b-bottom {
+	position: absolute;
+	width: calc(100% - 110px);
+	left: 55px;
+	height: 1px;
+}
+b-right,b-left,b-top,b-bottom {
+	background-color: #eee;
+}
+b-right {right: 0}
+b-left {left: 0}
+b-top {top: 0}
+b-bottom {bottom: 0}
+
+.profile-card {
+	border: 0;
+	box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .1), 0 4px 5px 0 rgba(0, 0, 0, .07), 0 1px 10px 0 rgba(0, 0, 0, .06);
+}
+.list-group-item {
+	border: 1px solid rgba(0,0,0,.075)
 }
