--- a/layout/user.html
+++ b/layout/user.html
@@ -1,7 +1,7 @@
     <section class="row alter-n8 mt-5" flex-grow>
     <div class="container">
         <div class="row pt-5">
-            <div class="col-md-4 col-sm-6 col-12 mb-3 small">
+            <div class="col-md-4 col-12 mb-3 small">
                 <div class="card profile-card">
                     <div class="card-img-top" data-src="http://www.poezie.ro/images/users/033305-m.jpg">
                         <div class="card-body">
@@ -17,7 +17,7 @@
                 </div>
                 <div class="alte-detalii"><p class="muted lead mt-3"><i>Detalii secundare aici...</i></p></div>
             </div>
-            <div class="col-md-8 col-sm-6 col-12">
+            <div class="col-md-8 col-12">
                 <div class="form-group">
                     <input class="form-control" disabled value="http://www.agonia.ro/index.php/author/0033305/Ottilia_Ardeleanu">
                 </div>
